# diluted-steganography-nlp-9907-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: corpus_results.tex  main_results.tex  significance.tex
papers/: README.md
papers/pages_early_signs/: 2507.02737_early_signs_steganographic_capabilities_frontier_llms_manifest.txt
papers/pages_robust/: 2504.08977_robust_steganography_from_llms_manifest.txt
papers/pages_zero_shot/: 2403.10856_zero_shot_generative_linguistic_steganography_manifest.txt
prompts/: detection_prompt.txt  external_detection_prompt.txt  extraction_prompt.txt
research_workspace/: __init__.py
results/processed/: detection_summary.csv  environment.json  extraction_failures.csv  extraction_summary.csv  run_overview.json  scheme_comparisons.csv
results/raw/: api_cache.json  api_cache_smoke.json  api_cache_smoke2.json  benchmark_dataset.jsonl  model_outputs.jsonl
src/: run_diluted_steg_experiment.py
