[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.11.0",
    "matplotlib>=3.10.8",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
